# Hein_Pipeline

./: .gitignore  README.md  colab_run.ipynb  evaluation.py  evaluation_compare.py  evaluation_general.py  evaluation_page.py  evaluation_section.py  evaluation_structural.py  main.ipynb  main.py  pyproject.toml  requirements.txt
Combinator/: README.md  combine_results.py  combine_results_v2.py  merge_sections.py
Converter/: error.txt  manager.py  yml_manager.py  yml_manager1.py
Converter/final_yml/: ajil0120no1.yml  mijoeqv0015no1.yml
CrossRef/: extract.py
CrossRef/results/: ajil0120no1.json  direlaw0021.json
Evaluation/ajil0120no1/: ajil0120no1_20260326_041601.json  ajil0120no1_20260326_041601.txt  ajil0120no1_20260326_044030.json  (+2 more)
EvaluationScript/: evaluation_general.py  evaluation_page.py  evaluation_section.py  evaluation_structural.py
LLM/: README.md  extract_doi.py  ocr_pipeline.py
Utilities/: app_logging.py  archive_outputs.py
Validator/: yml_compare.py
Webscraper/: databaseScrape.py  journals.py  known_journals.json  metadata_utils.py  recursiveScrape.py  scraper.py
notebooks/: 00_environment.ipynb  01_full_pipeline.ipynb  02_evaluation.ipynb  03_evaluation_compare.ipynb  04_stage_crossref.ipynb  05_stage_llm_ocr.ipynb  06_stage_combinator.ipynb  07_stage_converter_dispatch.ipynb  08_validator_yml_compare.ipynb  09_utilities_archive_outputs.ipynb  10_llm_extract_doi.ipynb  11_webscraper_database_scrape.ipynb  12_webscraper_full_crawl_demo.ipynb  13_combinator_v1_batch.ipynb  14_evaluation_subscores.ipynb  _generate_notebooks.py
(+3506 files in other folders)
