[project]
name = "integrated-hein"
version = "0.1.0"
description = ""
authors = [
    { name = "Jay Pathare", email = "jaypathare123@gmail.com" }
]
readme = "README.md"
requires-python = "==3.12.3"
dependencies = ["beautifulsoup4 (==4.14.3)", "requests (==2.32.5)"]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"